[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aas_editor"
version = "0.4.4"
dependencies = [
    "PyQt6",
    "basyx-python-sdk@git+https://github.com/rwth-iat/basyx-python-sdk@aas_manager/v301#subdirectory=sdk",
    "aas_test_engines",
    "pytz>=2023.3",
    "PyQt6-WebEngine",
    "pyinstaller==6.4.0",
    "openpyxl>=3.1.2",
    "toml>=0.10.2",
]

requires-python = ">=3.10"
authors = [
  {name = "Igor Garmaev", email = "i.garmaev@iat.rwth-aachen.de"},
]
maintainers = [
  {name = "Igor Garmaev", email = "i.garmaev@iat.rwth-aachen.de"},
]
description = """
AAS Manager is a free, open source, cross-platform viewer/editor based for Asset Administration Shell (AAS).
The editor is based on PyQt Framework and Eclipse BaSyx Python SDK (https://github.com/eclipse-basyx/basyx-python-sdk).
Developed at the Chair of Information and Automation Systems for Process and Material Technology at RWTH Aachen.
"""
readme = "README.md"
license = {text = "GNU General Public License v3.0"}
keywords = ["AAX"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools.packages.find]
where = ["aas_editor"]
include = ["."]


[project.urls]
Homepage = "https://github.com/rwth-iat/aas_manager"
Repository = "https://github.com/rwth-iat/aas_manager.git"
Issues = "https://github.com/rwth-iat/aas_manager/issues"

[project.entry-points."spam"]
aas_editor = "main:main"

[project.gui-scripts]
aas_editor = "main:main"